# home_assistant

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  PROJECT_CONTEXT.md  README.md
docs/: OverallSystem.drawio  PROJECT_CONTEXT.md  ROADMAP.md  TODO.md  requirements.md
patches/boost/log/utility/: strictest_lock.hpp
scripts/: home_assistant.py
src/: main.cpp
src/logger/: logger.hpp
src/service/: HAService.cpp  HAService.hpp
toolchain/: linux-aarch64.cmake
